# kvcache-blog

./: .gitattributes  .gitignore  README.md  go.mod  hugo_stats.json  test.md
assets/js/: kv-cache-calculator.js  kv-cache-lab-worker.js  kv-cache-lab.js
assets/wasm/: kvcache-sim.wasm
config/_default/: hugo.yaml  languages.yaml  menus.yaml  params.yaml
content/: _index.md
content/about/: index.md
content/authors/admin/: _index.md
content/blog/: _index.md  _index.zh.md
content/blog/attention-mechanisms-compared/: index.md
content/blog/calculate-kvcache-cache-budge/: index.md
content/blog/deepseek-v2/: index.md
content/blog/getting-started-llm-inference/: index.md
content/blog/kt-sft/: index.md
content/docs/: exllama.md
content/projects/: _index.md
data/kv_cache_calculator/: models.yaml
data/kv_cache_lab/: presets.yaml
docs/: model-configs-reference.md
hugo-blox/blox-tailwind/: tailwind.config.js
layouts/shortcodes/: kv-cache-calculator.html  kv-cache-lab.html
scripts/: build-wasm.sh  kv-cache-lab-extend-precomputed.mjs  kv-cache-lab-fetch-traces.mjs  kv-cache-lab-full-precompute.mjs  kv-cache-lab-merge-precomputed.mjs  kv-cache-lab-native-sim.cc  kv-cache-lab-normalize-traces.mjs  kv-cache-lab-precompute-curves.mjs  kv-cache-lab-run-incremental.mjs  sglang-log-to-kvcache-trace.py
scripts/lib/: kv-cache-lab-traces.mjs
tests/: kv-cache-calculator.test.mjs  kv-cache-lab-pool.test.mjs  kv-cache-lab-traces.test.mjs  kv-cache-lab-wasm.test.mjs  kv-cache-lab.test.mjs
wasm/kvcache-sim/: Cargo.toml
wasm/kvcache-sim/src/: lib.rs
(+45 files in other folders)
